--- a/static/index.html
+++ b/static/index.html
@@ -67,7 +67,8 @@
 </div>
 
 <div ng-if="!selecting && logged_in">
-<p>Editing {{clip}}</p>
+<p id="clip-transcriber-header">Transcribing: {{clips[clip].label}}</p>
+<p id="clip-transcriber-complete" ng-click="complete()">Save &amp; Exit</p>
 <!-- Ideally don't want to use a table here. Flexbox would be preferred. Will confirm browser compat. -->
 <table id="transcriber" width="100%">
     <tr>
@@ -90,12 +91,16 @@
 
         var formatted = (minutes > 0 ? minutes+' minutes': '');
         formatted += (seconds > 0 ? ' '+seconds+' seconds': '');
+
         return formatted;
     };});
 
     app.controller('user', function($scope, $http) {
         $scope.logged_in = true;
+        $scope.selecting = false;
+        /* defaults
         $scope.selecting = true;
+        */
         $scope.clip = 0;
         $scope.host_addr = "127.0.0.1:5000";
 
@@ -108,7 +113,6 @@
         $scope.login = function() {
             $scope.logged_in = true;
             $scope.selecting = true;
-            $scope.clip = 0;
         }
 
         $scope.edit = function(id) {
@@ -116,9 +120,15 @@
             $scope.clip = id;
         }
 
+        $scope.complete = function() {
+            /* save scope.clip annotations */
+
+            $scope.selecting = true;
+        }
+
         $scope.clips = [
             {
-                "id": "1",
+                "id": "0",
                 "label": "TestWWWWWWWWWW",
                 "audio_url": "",
                 "duration": 4730,
@@ -137,11 +147,42 @@
                     }]
             },
             {
-                "id": "2",
+                "id": "1",
                 "label": "Test Test Test Test Test Test Test Test Test Test Test Test",
                 "audio_url": "",
                 "duration": "63812",
                 "segments": [
+                    {
+                        "start": 0,
+                        "end": 1,
+                        "speaker": "1",
+                        "annotation": "",
+                    },
+                    {
+                        "start": 2,
+                        "end": 3,
+                        "speaker": 2,
+                        "annotation": "",
+                    }]
+            },
+            {
+                "id": "2",
+                "label": "Audio.wav",
+                "audio_url": "",
+                "duration": "4232000",
+                "segments": [
+                    {
+                        "start": 0,
+                        "end": 1,
+                        "speaker": "1",
+                        "annotation": "",
+                    },
+                    {
+                        "start": 0,
+                        "end": 1,
+                        "speaker": "1",
+                        "annotation": "",
+                    },
                     {
                         "start": 0,
                         "end": 1,
