--- a/static/index.html
+++ b/static/index.html
@@ -21,70 +21,29 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/static/favicon-32.png">
 </head>
 
-<body ng-app="Alveo" ng-controller="user">
+<body ng-app="Alveo" ng-controller="AlveoController as vm">
 <noscript>
 <p id="javascript-check">This resource requires JavaScript to be enabled. Please whitelist us if you wish to use the application.</p>
 </noscript>
 <nav>
     <!-- If logged in -->
-    <a ng-if="svars.logged_in" href="" ng-click="logout()">Logout</a>
+    <session template="logout" loggedin="vm.loggedin"></session>
 
     <a href="http://alveo.edu.au/" target="_blank">Alveo</a>
     <a href="#about">About</a>
 </nav>
 <header><p>Alveo Transcription Tool</p></header>
 
-<!-- If !logged in -->
-<div ng-if="!svars.logged_in">
-<p id="hello">Welcome to the Alveo Transcription Tool. You're just one step away from being able to begin transcribing!</p>
-<p id="alveo-button" ng-click="login()">Login via Alveo</p>
-</div>
-
-<div id="clips" ng-if="svars.selecting && svars.logged_in">
-    <p id="clips-info">Please select a clip to transcribe.</p>
-    <div class="clip" ng-repeat="x in svars.clips" ng-click="edit(x.id)">
-        <div class="name" ng-bind="x.label"></div>
-        <div class="info">
-            <div class="duration" ng-bind="x.duration | durationFormat"></div>
-            <ng-pluralize class="segments" count="x.segments.length"
-                          when="{'1': '(1 segment)',
-                          'other': '({} segments)'}">
-            </ng-pluralize>
-        </div>
-    </div>
-</div>
-
-<div ng-if="!svars.selecting && svars.logged_in">
-    <p id="clip-transcriber-header">Transcribing: {{svars.clips[svars.clip].label}}</p>
-    <p id="clip-transcriber-complete" ng-click="complete()">Save &amp; Return</p>
-
-    <div id="transcriber">
-        <div class="annotator" ng-repeat="x in svars.clips[svars.clip].segments">
-            <p class="timestamp">{{x.start}} to {{x.end}}</p>
-            <div class="annotator-fields">
-                <input class="speaker" type="text" placeholder="Speaker" ng-model="x.speaker"></input>
-                <input class="annotation" type="text" placeholder="Annotation" ng-model="x.annotation"></input>
-            </div>
-            <div class="playbar"></div>
-        </div>
-    </div>
-<!--
-<table id="transcriber" width="100%">
-    <tr>
-        <td>Play</td>
-        <td>Speaker</td>
-        <td>Transcription Field</td>
-    </tr>
-</table>
--->
-</div>
+<session ng-if="!vm.loggedin" template="login" loggedin="vm.loggedin"></session>
+<selector ng-if="vm.loggedin && vm.selecting" selecting="vm.selecting" clip="vm.clip" clips="vm.clips"></selector>
+<annotator ng-if="!vm.selecting && vm.loggedin" selecting="vm.selecting" clip="vm.clip" clips="vm.clips"></annotator>
 
 <footer><p>Site &copy; YEAR COMPANY all rights reserved</p></footer>
 
 <script>
     var app = angular.module('Alveo', ['ngStorage']);
 
-    app.filter('durationFormat', function () {
+    angular.module('Alveo').filter('durationFormat', function () {
     return function (input) {
         var seconds = Math.floor((input % 60000) / 1000);
         var minutes = Math.floor(input / 60000);
@@ -95,13 +54,13 @@
         return formatted;
     };});
 
-    app.controller('user', function($scope, $http, $localStorage) {
-        $scope.svars = $localStorage.$default({
-            'logged_in': true,
-            'clip': 0,
-            'host_addr': "127.0.0.1:5000",
-            'selecting': true,
-            'clips': [{
+    angular.module('Alveo')
+    .controller('AlveoController', function AlveoController() {
+        // $scope.svars = $localStorage.$default({
+        this.loggedin = false;
+        this.selecting = true;
+        this.clip = 0;
+        this.clips = [{
                 "id": "0",
                 "label": "TestWWWWWWWWWW",
                 "audio_url": "",
@@ -177,31 +136,62 @@
                         "annotation": "",
                     }]
             }]
-        });
-
-        $scope.logout = function() {
-            $http.get('/logout')
-            $scope.svars.logged_in = false;
-            /* Clear all cached files */
-        };
-
-        $scope.login = function() {
-            /* Check cache to see if there are sufficient clips */
-            /*  If not, make a request for a new set of clips */
-            $scope.svars.logged_in = true;
-            $scope.svars.selecting = true;
+    })
+    .component('session', {
+        controller: function($http) {
+            function login() {
+                this.loggedin = true;
+            }
+            function logout() {
+                this.loggedin = false;
+                $http.get('/logout')
+                // $scope.svars.selecting = true;
+            }
+            this.logout = logout;
+            this.login = login;
+        },
+        bindings: {
+            loggedin: '=',
+            template: '@'
+        },
+        templateUrl: function ($element, $attrs) {
+            var templates = {
+                'logout': 'static/logout.html',
+                'login': 'static/login.html',
+            }
+            return templates[$attrs.template];
         }
-
-        $scope.edit = function(id) {
-            $scope.svars.selecting = false;
-            $scope.svars.clip = id;
-        }
-
-        $scope.complete = function() {
-            /* save scope.clip annotations */
-
-            $scope.svars.selecting = true;
-        }
+    })
+    .component('selector', {
+        controller: function($http) {
+            function edit(id) {
+                this.selecting = false;
+                this.clip = id;
+            }
+            this.edit = edit;
+        },
+        bindings: {
+            selecting: '=',
+            clip: '=',
+            loggedin: '<',
+            clips: '<',
+        },
+        templateUrl: 'static/selector.html'
+    })
+    .component('annotator', {
+        controller: function() {
+            function complete() {
+                this.selecting = true;
+            }
+            this.complete = complete;
+        },
+        bindings: {
+            selecting: '=',
+            clip: '=',
+            loggedin: '<',
+            clips: '<',
+        },
+        templateUrl: 'static/annotator.html'
     });
 </script>
 </body>
