--- a/static/annotator.html
+++ b/static/annotator.html
@@ -1,8 +1,8 @@
-<p id="clip-transcriber-header">Transcribing: {{$ctrl.clips[$ctrl.clip].label}}</p>
+<p id="clip-transcriber-header">Transcribing: {{$ctrl.clip.label}}</p>
 <p id="clip-transcriber-complete" ng-click="$ctrl.complete()">Save &amp; Return</p>
 
 <div id="transcriber">
-    <div class="annotator" ng-repeat="x in $ctrl.clips[$ctrl.clip].segments">
+    <div class="annotator" ng-repeat="x in $ctrl.clip.segments">
         <p class="timestamp">{{x.start}} to {{x.end}}</p>
         <div class="annotator-fields">
             <input class="speaker" type="text" placeholder="Speaker" ng-model="x.speaker"></input>
