--- a/static/index.html
+++ b/static/index.html
@@ -39,7 +39,7 @@
 <header><p>Alveo Transcription Tool</p></header>
 <session ng-if="!vm.loggedin" template="login" loggedin="vm.loggedin"></session>
 <selector ng-if="vm.loggedin && vm.selecting" selecting="vm.selecting" clip="vm.clip" clips="vm.clips"></selector>
-<annotator ng-if="!vm.selecting && vm.loggedin" selecting="vm.selecting" clip="vm.clip" clips="vm.clips"></annotator>
+<annotator ng-if="!vm.selecting && vm.loggedin" selecting="vm.selecting" clip="vm.clips[vm.clip]"></annotator>
 <footer><p>Site &copy; YEAR COMPANY all rights reserved</p></footer>
 </body>
 </html>
