--- a/static/index.html
+++ b/static/index.html
@@ -20,6 +20,8 @@
     <script src="/static/session.js"></script>
     <script src="/static/selector.js"></script>
     <script src="/static/annotator.js"></script>
+
+    <script src="/static/unittests.js"></script>
     
     <link rel="shortcut icon" href="/static/favicon.ico">
     <link rel="icon" type="image/png" href="/static/favicon-16.png">
