--- a/alveott/src/index.html
+++ b/alveott/src/index.html
@@ -1,14 +1,25 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <meta http-equiv="content-type" content="text/html; charset=UTF-8">
   <meta charset="utf-8">
-  <title>Alveott</title>
-  <base href="/">
+    <meta name="description" content="Alveo Transcription Tool is an easy to use web tool to provide annotations for audio.">
+    <meta name="author" content="David Irving">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <title>Alveo Transcription Tool</title>
+    <base href="/">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/ngStorage/0.3.10/ngStorage.min.js"></script> -->
+
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+  <noscript>
+    <p id="javascript-check">This resource requires JavaScript to be enabled. Please whitelist us if you wish to use the application.</p>
+  </noscript>
+
   <app-root></app-root>
 </body>
 </html>
