--- a/alveott/src/index.html
+++ b/alveott/src/index.html
@@ -20,6 +20,6 @@
     <p id="javascript-check">This resource requires JavaScript to be enabled. Please whitelist us if you wish to use the application.</p>
   </noscript>
 
-  <app-root></app-root>
+  <app-root>Loading...</app-root>
 </body>
 </html>
