--- a/alveott/src/index.html
+++ b/alveott/src/index.html
@@ -12,6 +12,7 @@
     <base href="/">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
+    <link rel="stylesheet" href="http://127.0.0.1:5000/static/sample/foundation-icons/foundation-icons.css">
 
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
