--- a/src/index.html
+++ b/src/index.html
@@ -3,22 +3,19 @@
 <head>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
   <meta charset="utf-8">
-    <meta name="description" content="Alveo Transcription Tool is an easy to use web tool to provide annotations for audio.">
-    <meta name="author" content="David Irving">
+  <meta name="description" content="Alveo Transcription Tool is an easy to use web tool to provide annotations for audio.">
+  <meta name="author" content="David Irving">
 
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Alveo Transcription Tool</title>
-    <base href="/">
-
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
-    <link rel="stylesheet" href="assets/foundation-icons/foundation-icons.css">
+  <title>Alveo Transcription Tool</title>
+  <base href="/">
 
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
   <noscript>
-    <p id="javascript-check">This resource requires JavaScript to be enabled. Please whitelist us if you wish to use the application.</p>
+    <p id="javascript-check">This is an Angular application that requires JavaScript to be enabled. Please whitelist this domain if you wish to use the application.</p>
   </noscript>
 
   <app-root>Loading...</app-root>
