Support material design icons

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
   <title>Alveo Transcription Tool</title>
   <base href="/">
 
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
