Add spinner for app before it loads

--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,14 @@
     <p id="javascript-check">This is an Angular application that requires JavaScript to be enabled. Please whitelist this domain if you wish to use the application.</p>
   </noscript>
 
-  <app-root>Loading...</app-root>
+  <app-root>
+    <div class="preloaded-container">
+      <div class="text-container">
+        <p class="title">Alveo Transcription Tool</p>
+        <p class="body">Loading application ...</p>
+      </div>
+      <div class="app-preloaded-spinner"></div>
+    </div>
+  </app-root>
 </body>
 </html>
