--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Alveo Transcription Tool</title>
+  <title>Alveo Transcriber</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <meta name="description" content="Alveo Transcription Tool is an easy to use web tool to provide annotations for audio.">
+  <meta name="description" content="Alveo Transcriber is an easy to use web tool to provide annotations for audio.">
   <meta name="author" content="David Irving">
 
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -31,7 +31,7 @@
   <app-root>
     <div class="preloaded-container">
       <div class="text-container">
-        <p class="title">Alveo Transcription Tool</p>
+        <p class="title">Alveo Transcriber</p>
         <p class="body">Loading application ...</p>
       </div>
       <div class="app-preloaded-spinner"></div>
